fix: sidebar style fix

--- a/_sass/themes/_light.scss
+++ b/_sass/themes/_light.scss
@@ -34,11 +34,11 @@
   --sidebar-bg: #f6f8fa;
   --sidebar-border-color: #efefef;
   --sidebar-muted-color: #545454;
-  --sidebar-active-color: #1d1d1d;
-  --sidebar-hover-bg: rgb(223 233 241 / 64%);
+  --sidebar-active-color: #1e1e1e;
+  --sidebar-hover-bg: rgb(100 108 255 / 90%);
   --sidebar-btn-bg: white;
   --sidebar-btn-color: #8e8e8e;
-  --avatar-border-color: white;
+  --avatar-border-color: #717171;
 
   /* Topbar */
   --topbar-bg: rgb(255 255 255 / 70%);
