--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -140,8 +140,10 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
         align-items: center;
         border-radius: 0.75rem;
         font-weight: 600;
+        transition: all 0.2s ease;
 
         &:hover {
+          color: var(--sidebar-active-color);
           background-color: var(--sidebar-hover-bg);
         }
 
