--- a/_sass/themes/_dark.scss
+++ b/_sass/themes/_dark.scss
@@ -38,7 +38,7 @@
   --sidebar-border-color: #292929;
   --sidebar-muted-color: #868686;
   --sidebar-active-color: rgb(255 255 255 / 95%);
-  --sidebar-hover-bg: #262626;
+  --sidebar-hover-bg: rgb(100 108 255 / 64%);
   --sidebar-btn-bg: #232328;
   --sidebar-btn-color: #787878;
   --avatar-border-color: rgb(206 206 206 / 90%);
