--- a/_sass/themes/_light.scss
+++ b/_sass/themes/_light.scss
@@ -35,10 +35,10 @@
   --sidebar-border-color: #efefef;
   --sidebar-muted-color: #545454;
   --sidebar-active-color: #1e1e1e;
-  --sidebar-hover-bg: rgb(100 108 255 / 90%);
+  --sidebar-hover-bg: rgb(100 108 255 / 50%);
   --sidebar-btn-bg: white;
   --sidebar-btn-color: #8e8e8e;
-  --avatar-border-color: #717171;
+  --avatar-border-color: rgb(100 108 255 / 50%);
 
   /* Topbar */
   --topbar-bg: rgb(255 255 255 / 70%);
