style: move searchbar to sidebar and add styles

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,7 +50,7 @@ refactor: true
 {% if paginator.page == 1 %}
   <div class=" p-4">
     <div class="d-flex flex-column">
-      <p class="h1 mb-3">Welcome to {{ site.title }}!!</p>
+      <p class="h1 mb-3 fw-bold">Welcome to {{ site.title }}!!</p>
       <p class="h5 mb-1">이 블로그는</p>
       <p class="h5 mb-0">* Full-stack</p>
       <p class="h5 mb-0">* CI/CD</p>
